<resources>
    <string name="app_name">Saloon Me</string>
    <string name="home">Home</string>
    <string name="book_now">Book Now</string>
    <string name="saloons">Salons</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="blog">Blog</string>
    <string name="click_share">Click &amp; Share</string>
    <string name="feed">Feed</string>
    <string name="others">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="storeName">Store Name</string>
    <string name="hint_email_phone">Email / Mobile Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="next"><![CDATA[NEXT >]]></string>
    <string name="previous"><![CDATA[<Previous]]></string>
    <string name="select_seat_here">Select Seat here</string>
    <string name="submit_pay"><![CDATA[Submit & Pay >]]></string>
    <string name="enter_details">Enter Details</string>
    <string name="name">Name</string>
    <string name="salon_information">Salon Information</string>
    <string name="barber_information">Expert &amp; Schdule Information</string>
    <string name="payment_information">Payment Information</string>
    <string name="product_information">Service Information</string>
    <string name="popular_places">Popular Salons in City</string>
    <string name="trending">Trending</string>
    <string name="home_services">Home Services</string>
    <string name="remove_cart">Remove from cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="select_date">select date</string>
    <string name="select_time">select time</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="refund_will_be_processed_within_14_business_days">*Refund will be processed within 14 business days.</string>

    <string name="Rs">\u20B9</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="change_password">Change Password</string>
    <string name="check_out">Check Out</string>
    <string name="select_gender">Select Gender</string>
    <string name="register">Register</string>
    <string name="logout_msg">Are you sure you want to logout from app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discount">Discount</string>
    <string name="trending_hair_styles">Trending Hair Styles</string>
    <string name="hint_enter_otp">Enter Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="about_salon">About Salon</string>
    <string name="description">Description</string>
    <string name="timings">Timings : </string>
    <string name="select_service">Select Service</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>