<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_screen_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:bnc_mode="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BottomNavigationViewTextStyle"
            app:bt_active="true"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/bottomNavigationInactiveColor"
            app:bt_icon="@drawable/ic_home"
            app:bt_padding="@dimen/_11sdp"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/home"
            app:bt_titlePadding="@dimen/_11sdp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BottomNavigationViewTextStyle"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/bottomNavigationInactiveColor"
            app:bt_icon="@drawable/ic_salon"
            app:bt_padding="@dimen/_11sdp"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/saloons"
            app:bt_titlePadding="@dimen/_11sdp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BottomNavigationViewTextStyle"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/bottomNavigationInactiveColor"
            app:bt_icon="@drawable/ic_person"
            app:bt_padding="@dimen/_11sdp"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/profile"
            app:bt_titlePadding="@dimen/_11sdp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BottomNavigationViewTextStyle"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/bottomNavigationInactiveColor"
            app:bt_icon="@drawable/ic_shop"
            app:bt_padding="@dimen/_11sdp"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/cart"
            app:bt_titlePadding="@dimen/_11sdp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/BottomNavigationViewTextStyle"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/bottomNavigationInactiveColor"
            app:bt_icon="@drawable/ic_more"
            app:bt_padding="@dimen/_11sdp"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/others"
            app:bt_titlePadding="@dimen/_11sdp" />
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>