<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    android:background="@color/white"
    android:padding="@dimen/_5sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/about_salon"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_short_bio_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_regular"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about"
        tools:text="@string/dummy_text" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_short_bio_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_regular"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        tools:text="@string/dummy_text" />

</androidx.constraintlayout.widget.ConstraintLayout>