<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <EditText
        android:id="@+id/firstName_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_firstName"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/lastName_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_lastName"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_tv" />

    <EditText
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_email"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_tv" />

    <EditText
        android:id="@+id/phoneNumber_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_mobile_number"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_select_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:textColor="@color/black"
        android:text="@string/select_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber_tv" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_gender" />

    <EditText
        android:id="@+id/password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/_10sdp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

    <ImageView
        android:id="@+id/showOrHidePwdIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_tv"
        app:layout_constraintEnd_toEndOf="@+id/password_tv"
        app:layout_constraintTop_toTopOf="@+id/password_tv" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/btn_rounded_fill"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_tv" />

    <TextView
        android:id="@+id/tv_newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_toLeftOf="@+id/signup"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="Already have an account?"
        android:textColor="@color/cool_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>