<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/enter_details"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_details"></androidx.appcompat.widget.AppCompatTextView>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/search_bg"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/name"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/bottomNavigationInactiveColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/hint_email"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"></androidx.appcompat.widget.AppCompatTextView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/search_bg"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_email"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/bottomNavigationInactiveColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/hint_mobile_number"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"></androidx.appcompat.widget.AppCompatTextView>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/search_bg"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_mobile_number"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/bottomNavigationInactiveColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/hint_address"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone"></androidx.appcompat.widget.AppCompatTextView>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/search_bg"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_address"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/bottomNavigationInactiveColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />
</androidx.constraintlayout.widget.ConstraintLayout>