<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_service"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_bold"
        android:text="saloon"
        app:layout_constraintStart_toEndOf="@+id/iv_service"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="Duration"
        app:layout_constraintStart_toEndOf="@+id/iv_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_service_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="Amount"
        app:layout_constraintStart_toEndOf="@+id/iv_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/discount"
        app:layout_constraintStart_toEndOf="@+id/iv_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_add_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/mulish_bold"
        android:padding="@dimen/_5sdp"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_bookNow"
        app:layout_constraintTop_toBottomOf="@+id/iv_service" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bookNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/mulish_bold"
        android:padding="@dimen/_5sdp"
        android:text="@string/book_now"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_service" />
</androidx.constraintlayout.widget.ConstraintLayout>