<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ChangePasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <EditText
        android:id="@+id/password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/_10sdp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/showOrHidePwdIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_tv"
        app:layout_constraintEnd_toEndOf="@+id/password_tv"
        app:layout_constraintTop_toTopOf="@+id/password_tv" />

    <EditText
        android:id="@+id/confirm_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/mulish_regular"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/_10sdp"
        android:singleLine="true"
        android:textColorHint="@color/cool_gray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_tv" />

    <ImageView
        android:id="@+id/confirm_showOrHidePwdIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_tv"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_tv"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_tv" />

    <TextView
        android:id="@+id/change_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/btn_rounded_fill"
        android:fontFamily="@font/mulish_bold"
        android:gravity="center"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>